--- a/templates/indexA.html
+++ b/templates/indexA.html
@@ -87,6 +87,9 @@ elle, n'a été dévoilée que le 2 juin 2013 avec sa photo teaser. </I></p>
 <a href="https://www.youtube.com/watch?v=tIGd1-ckvkc"><img src="static/v-minnie.png"></a>
 </div>
 
+
+
+<h2>bla bla bla bla</h2>
 </body>
 
 
