--- a/templates/indexA.html
+++ b/templates/indexA.html
@@ -71,14 +71,15 @@ elle, n'a été dévoilée que le 2 juin 2013 avec sa photo teaser. </I></p>
         <a href="https://www.youtube.com/watch?v=14QV3uGijxg">
           <input type="button" name="Cliquez Ici"value="Cover 2U (BTS Kim Taehyung version)" style="background:purple"></a>
             <a href="https://www.youtube.com/watch?v=p8npDG2ulKQ"><input type="button" name="Cliquez Ici"value="BTS (방탄소년단) LOVE YOURSELF 轉 Tear 'Singularity' Comeback Trailer"></a>
-        <button href="https://www.youtube.com/watch?v=mJEHTdQoSsA" type="button" class="btn btn-secondary btn-lg">BTS V & Jin- 'Even If I Die, It's You'</button>
+
+        <a href="https://www.youtube.com/watch?v=mJEHTdQoSsA" class="btn btn-light stretched-link">BTS V & Jin- 'Even If I Die, It's You</a>
         
             <label for="t-rex-roar-loop">
                 V (BTS) - Someone Like You (Original By Adele).mp3
               </label>
               <br>
             <audio controls>
-  <source href="https://www.youtube.com/watch?v=pvmNeNd5SYk" src="V (BTS) - Someone Like You (Original By Adele).mp3" type="audio/mpeg">
+  <source href="https://www.youtube.com/watch?v=pvmNeNd5SYk" src="static/V (BTS) - Someone Like You (Original By Adele).mp3" type="audio/mpeg">
 </audio>
 <br>
 
